2006-11-23  Brandon Hale  <brandon@ubuntu.com>

	* src/last-exit.exe.config.in:
	Add dllmap entry for dbus-glib-1, bug #356873

	* src/NotificationArea.cs:
	Copy the latest code from Muine to properly support transparent
	panels, bug #365099

	* po/POTFILES.in, src/Defines.cs.in:
	Apply patches from Pritt on bug #365091 to fix things up 
	for translators.

	* data/icons/*:
	Fix for bug #354430, install application icons properly into the icon
	theme. We still need a 32x32 icon for you artists out there.

2006-11-01  Iain Holmes  <iain@gnome.org>

	* src/ImageLoader.cs: Catch bad urls from Priit

2006-10-24  Iain holmes  <iain@gnome.org>

	* liblast-exit/player.c: Patch to stop player on EOS from Priit

2006-10-23  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs: Patch from Priit Laes to fix Journal URL

2006-08-28  Brandon Hale  <brandon@ubuntu.com>
	
	Call dbus_g_thread_init first thing in Main(), fixing locking issues
	in pre- DBus 0.92

	Patch from Sebastian Dröge:
	Change signature of DBusMessageHandler delegate to (string, string),
	as mashsallying object[] in delegate paramater lists segfaults Mono.

2006-08-27  Brandon Hale  <brandon@ubuntu.com>

	* src/PlayerWindow.cs
	data/ui/TrayIcon.xml:
	Add a Preferences button to the main window where it belongs, remove
	it from the tray menu.

2006-08-21  Iain Holmes  <iain@gnome.org>

	* liblast-exit/player.c: Use gconfaudiosink. Stop garret complaining.

2006-08-13  Brandon Hale  <brandon@ubuntu.com>

	* src/Config.cs
	src/TrayIcon.cs
	date/glade/Preferences.glade:
	Add GConf event notifier, if show_notifications changes, reset the
	local bool in TrayIcon. This means toggling the key no longer requires
	a restart to take effect. Tips from Sebastian Dröge.

	* Makefile.am
	src/Makefile.am:
	Add mkinstalldirs to MAINTAINERCLEANFILES, last-exit.exe.mdb to
	CLEANFILES

2006-08-12  Brandon Hale  <brandon@ubuntu.com>

	* src/Preferences.cs:
	Hook up Create new account / Join Last Exit group buttons
