@@ -458,10 +458,8 @@
 			  <property name="focus_on_click">True</property>
 
 			  <child>
-			    <widget class="GtkImage" id="image6">
+			    <widget class="GtkImage" id="info_button_image">
 			      <property name="visible">True</property>
-			      <property name="stock">gtk-info</property>
-			      <property name="icon_size">4</property>
 			      <property name="xalign">0.5</property>
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
@@ -514,10 +512,8 @@
 			  <property name="focus_on_click">True</property>
 
 			  <child>
-			    <widget class="GtkImage" id="image7">
+			    <widget class="GtkImage" id="tag_button_image">
 			      <property name="visible">True</property>
-			      <property name="stock">gtk-justify-fill</property>
-			      <property name="icon_size">4</property>
 			      <property name="xalign">0.5</property>
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
